crates/oxc_react_compiler/tests/snapshots/update-expression-on-function-parameter-1.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/update-expression-on-function-parameter-1.js
---
import { c as _c } from "react/compiler-runtime";
function Component(t0) {
	const $ = _c(10);
	let { a, b: t1, c: t2 } = t0;
	let [b] = t1;
	let { c } = t2;
	const d = a++;
	const e = ++a;
	const f = b--;
	const g = --b;
	const h = c++;
	const i = --c;
	let t3;
	if ($[0] !== a || $[1] !== b || $[2] !== c || $[3] !== d || $[4] !== e || $[5] !== f || $[6] !== g || $[7] !== h || $[8] !== i) {
		t3 = [
			a,
			b,
			c,
			d,
			e,
			f,
			g,
			h,
			i
		];
		$[0] = a;
		$[1] = b;
		$[2] = c;
		$[3] = d;
		$[4] = e;
		$[5] = f;
		$[6] = g;
		$[7] = h;
		$[8] = i;
		$[9] = t3;
	} else {
		t3 = $[9];
	}
	return t3;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{
		a: 2,
		b: [3],
		c: { c: 4 }
	}],
	isComponent: false
};
