crates/oxc_react_compiler/tests/snapshots/update-expression-on-function-parameter-2.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/update-expression-on-function-parameter-2.js
---
import { c as _c } from "react/compiler-runtime";
function Component(a) {
	const $ = _c(4);
	const d = a++;
	const e = ++a;
	let t0;
	if ($[0] !== a || $[1] !== d || $[2] !== e) {
		t0 = [
			a,
			d,
			e
		];
		$[0] = a;
		$[1] = d;
		$[2] = e;
		$[3] = t0;
	} else {
		t0 = $[3];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [2],
	isComponent: false
};
