crates/oxc_react_compiler/tests/snapshots/update-expression-on-function-parameter-3.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/update-expression-on-function-parameter-3.js
---
import { c as _c } from "react/compiler-runtime";
function Component(t0) {
	const $ = _c(4);
	let { c } = t0;
	const h = c++;
	const i = --c;
	let t1;
	if ($[0] !== c || $[1] !== h || $[2] !== i) {
		t1 = [
			c,
			h,
			i
		];
		$[0] = c;
		$[1] = h;
		$[2] = i;
		$[3] = t1;
	} else {
		t1 = $[3];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ c: 4 }],
	isComponent: false
};
