crates/oxc_react_compiler/tests/snapshots/update-expression-on-function-parameter-4.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/update-expression-on-function-parameter-4.js
---
import { c as _c } from "react/compiler-runtime";
function Component(t0) {
	const $ = _c(4);
	let [b] = t0;
	const f = b--;
	const g = --b;
	let t1;
	if ($[0] !== b || $[1] !== f || $[2] !== g) {
		t1 = [
			b,
			f,
			g
		];
		$[0] = b;
		$[1] = f;
		$[2] = g;
		$[3] = t1;
	} else {
		t1 = $[3];
	}
	return t1;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [[3]],
	isComponent: false
};
