crates/oxc_react_compiler/tests/snapshots/update-expression-safe-context-overwritten-before-capture.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/update-expression-safe-context-overwritten-before-capture.js
---
import { c as _c } from "react/compiler-runtime";
function useFoo() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		let count = 0;
		let cb = () => count++;
		cb = _temp;
		t0 = () => cb();
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const wrapper = t0;
	return wrapper;
}
function _temp() {
	return null;
}
