crates/oxc_react_compiler/tests/snapshots/update-expression-safe-postfix-context-kills-old-value.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/update-expression-safe-postfix-context-kills-old-value.js
---
import { c as _c } from "react/compiler-runtime";
function useFoo() {
	const $ = _c(1);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		let count = 0;
		t0 = () => count++;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	let cb = t0;
	cb++;
	return cb;
}
