crates/oxc_react_compiler/tests/snapshots/use-callback-simple.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/use-callback-simple.js
---
import { c as _c } from "react/compiler-runtime";
// @validateExhaustiveMemoizationDependencies:false
function component() {
	const $ = _c(4);
	const [count, setCount] = useState(0);
	let t0;
	if ($[0] !== count) {
		t0 = () => setCount(count + 1);
		$[0] = count;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	const increment = t0;
	let t1;
	if ($[2] !== increment) {
		t1 = <Foo onClick={increment} />;
		$[2] = increment;
		$[3] = t1;
	} else {
		t1 = $[3];
	}
	return t1;
}
